--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index" }
+    {
+      "source": "/api/:path",
+      "destination": "/api/index/:path"
+    }
   ]
 }
